# lupos

./: .gitignore  Makefile  README.md  circle-stdlib  configure  kernel.cpp  kernel.h  kernel7l.map  lconsole.h  lfilesystem.cpp  lfilesystem.h  liblua  luaint.cpp  luposapp.h
circle-stdlib/: Config.mk
circle-stdlib/include/: circle_stdlib_app.h
circle-stdlib/libs/circle/: Config.mk  Rules.mk
circle-stdlib/libs/circle-newlib/: README.md  config.sub
circle-stdlib/libs/circle-newlib/libgloss/: acinclude.m4  configure  configure.in
circle-stdlib/libs/circle-newlib/libgloss/circle/: Makefile.in  _exit.cpp  chown.c  configure  configure.in  execve.c  fork.c  fstat.c  getpid.c  gettod.cpp  io.cpp  isatty.c  kill.c  link.c  mem.c  mkdir.cpp  readlink.c  rename.cpp  sbrk.c  stat.c  symlink.c  times.c  unlink.cpp  wait.c
circle-stdlib/libs/circle-newlib/newlib/: configure  configure.host
circle-stdlib/libs/circle-newlib/newlib/libc/sys/circle/: Makefile.am  Makefile.in  configure  configure.in  dummy.c
circle-stdlib/libs/circle-newlib/newlib/libc/sys/circle/sys/: dirent.h
circle-stdlib/libs/circle/addon/fatfs/: ff.c  (+3 more)
circle-stdlib/libs/circle/lib/: koptions.cpp  screen.cpp
circle-stdlib/samples/03-stdio-fatfs/: kernel.cpp
circle-stdlib/samples/99-lua/: Makefile  kernel.cpp  kernel.h  kernel7l.map  lconsole.cpp  luaint.h  luposapp.h  main.cpp
lua-5.4.1/: Makefile
lua-5.4.1/src/: Makefile  luaconf.h  lvm.c
luacode/: concmds.lua  copy.lua  del.lua  dir.lua  edit.lua  fscmds.lua  go.lua  hello.lua  help.txt  misccmds.lua  plterm.lua  rename.lua  repl.lua
(+37 files in other folders)
